tasks overflow bug fixed

--- a/style.css
+++ b/style.css
@@ -62,7 +62,8 @@ ul {
   border-radius: 5px;
   margin: 0px auto;
   height: 45vh;
-  padding: 20px 27px 0px 20px;
+  padding: 0px 27px 0px 20px;
+  overflow: auto;
 }
 ul li {
   list-style: none;
